correcting overflow issue

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     color: #ededed;
     background:linear-gradient(90deg ,rgb(0, 0, 0),var(--base1) ) ;
     transition: 0.5s;
+    overflow-x: hidden;
 }
 
 .header{
